<resources>
    <string name="app_name">Passtru</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_sosmed">Create Sosmed</string>
    <string name="manage_account">Manage Account</string>

    <string name="ex_title_dialog">Dialog Title</string>
    <string name="ex_subtitle_dialog">lorem ipsum dolor</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="copy_password">Copy Password</string>
    <string name="more_option">More Option</string>
    <string name="account">Account</string>
    <string name="account_list">Account List</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="add_social_media">Add Social Media</string>
    <string name="input_new_social_media_here">Input new social media here</string>
    <string name="submit">Submit</string>
    <string name="submit_pin">Submit Pin</string>
    <string name="edit_account">Edit Account</string>
    <string name="detail_account">Detail Account</string>
    <string name="ex_username">accountexcample@passtru.co.id</string>
    <string name="social_media">Social Media</string>
    <string name="recently_added">Recently Added</string>
    <string name="see_all">see all</string>
    <string name="ex_sosmed">Instagram</string>
    <string name="thumb_title">Save New Password</string>
    <string name="thumb_subtitle">Store all your password just in your local device</string>
    <string name="lbl_username">Username</string>
    <string name="threee_dots_more_option">Threee Dots More Option</string>
    <string name="hint_add_sosmed">Input social media name</string>
    <string name="see_all_sosmed">All Social Media</string>
    <string name="copy">COPY</string>

    <string name="deleted">has been deleted!</string>
    <string name="updated">has been updated!</string>
    <string name="created">has been created!</string>

    <string name="empty_title">Data Kosong</string>
    <string name="empty_subtitle">Mulailah menambahkan data baru!</string>
    <string name="delete_sosmed_title">Delete Social Media</string>
    <string name="delete_sosmed_subtitle">This process will also delete account data that contain this social media</string>
    <string name="err_required">This field cannot be empty</string>

    <string-array name="placeHolder">
        <item>Select Your Social Media</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>
</resources>