<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xl"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xl"
        android:background="@drawable/bg_half_rounded_white"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/l"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sosmedTitle"
                style="@style/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xl"
                android:text="@string/social_media" />

            <TextView
                android:id="@+id/sosmedSeeAll"
                style="@style/sectionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sosmedTitle"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_all" />

            <HorizontalScrollView
                android:id="@+id/nsvSosmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sosmedTitle"
                android:layout_marginTop="@dimen/s"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSosmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_sosmed_home" />

                    <TextView
                        android:id="@+id/sosmedAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_sosmed_more"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="@dimen/s"
                        android:text="@string/see_all_sosmed"
                        android:textColor="@color/white" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/recentTitle"
                style="@style/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nsvSosmed"
                android:layout_marginTop="@dimen/l"
                android:text="@string/recently_added" />

            <TextView
                android:id="@+id/recentAll"
                style="@style/sectionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/recentTitle"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recentTitle"
                android:layout_marginTop="@dimen/m"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_account_home" />

            <RelativeLayout
                android:id="@+id/rlNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvRecent"
                android:layout_marginTop="@dimen/m"
                android:background="@drawable/ripple_thumb"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="@dimen/l"
                android:paddingVertical="@dimen/l">

                <TextView
                    android:id="@+id/thumbTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/m"
                    android:layout_toStartOf="@+id/ivShield"
                    android:text="@string/thumb_title"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thumbSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbTitle"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/xs"
                    android:layout_marginEnd="@dimen/m"
                    android:layout_toStartOf="@+id/ivShield"
                    android:text="@string/thumb_subtitle"
                    android:textColor="@color/text_primary" />

                <ImageView
                    android:id="@+id/ivShield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_shield" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>